--- a/Services/Basket/Basket.API/Basket.API/Basket.API.csproj
+++ b/Services/Basket/Basket.API/Basket.API/Basket.API.csproj
@@ -1,9 +1,11 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>disable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerfileContext>..\..\..\..\src</DockerfileContext>
   </PropertyGroup>
 
   <ItemGroup>
