--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -15,6 +15,30 @@ services:
     ports:
         - "6379:6379"
 
+  discountdb:
+    container_name: discountdb
+    restart: always
+    environment:
+      - POSTGRES_USER=admin
+      - POSTGRES_PASSWORD=admin1234
+      - POSTGRES_DB=Discountdb
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data/
+
+  pgadmin:
+    container_name: pgadmin
+    restart: always
+    environment:
+      - PGADMIN_DEFAULT_EMAIL=admin@gmail.com
+      - PGADMIN_DEFAULT_PASSWORD=admin1234
+    ports:
+      - "5050:80"
+    volumes:
+      - pgadmin_data:/root/.pgadmin/
+
+
   portainer:
     container_name: portainer
     restart: always
@@ -44,4 +68,16 @@ services:
       - basketdb
     ports:
       - "8001:80"
+
+
+  discount.api:
+    container_name: discount.api
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - "DatabaseSettings:ConnectionString=Server=Discountdb;Port=5432;Database=Discountdb;User Id=admin;Password=admin1234;"
+    depends_on:
+      - discountdb
+
+    ports:
+      - "8002:80"
 
