--- a/src/Services/Discount/Discount.Grpc/Properties/launchSettings.json
+++ b/src/Services/Discount/Discount.Grpc/Properties/launchSettings.json
@@ -1,13 +1,12 @@
-﻿{
+{
   "profiles": {
     "Discount.Grpc": {
       "commandName": "Project",
-      "dotnetRunMessages": true,
-      "launchBrowser": false,
-      "applicationUrl": "http://localhost:5028;https://localhost:7227",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "dotnetRunMessages": true,
+      "applicationUrl": "http://localhost:5028"
     }
   }
 }
