--- a/src/Services/Ordering/Ordering.API/appsettings.json
+++ b/src/Services/Ordering/Ordering.API/appsettings.json
@@ -1,4 +1,12 @@
 {
+  "ConnectionStrings": {
+    "OrderingConnectionString": "Server=localhost,1455;Database=Orderdb;User Id=sa;Password=SwN12345678;trustservercertificate=true;"
+  },
+  "EmailSettings": {
+    "FromAddress": "erangagunarathna@gmail.com",
+    "ApiKey": "",
+    "FromName": "Eranga"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
