--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -102,3 +102,14 @@ services:
     ports:
       - "8003:80"
 
+
+  ordering.api:
+    container_name: ordering.api
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - "ConnectionStrings:OrderingConnectionString=Server=127.0.0.1,1455;Database=Orderdb;User Id=sa;Password=SwN12345678;trustservercertificate=true;"
+    depends_on:
+      - orderdb
+    ports:
+      - "8004:80"
+
