--- a/src/Services/Ordering/Ordering.API/appsettings.json
+++ b/src/Services/Ordering/Ordering.API/appsettings.json
@@ -2,6 +2,9 @@
   "ConnectionStrings": {
     "OrderingConnectionString": "Server=localhost,1455;Database=Orderdb;User Id=sa;Password=SwN12345678;trustservercertificate=true;"
   },
+  "EventBusSettings": {
+    "HostAddress": "amqp://guest:guest@localhost:5672"
+  },
   "EmailSettings": {
     "FromAddress": "erangagunarathna@gmail.com",
     "ApiKey": "",
